--- a/cook_inlet_catalogs/catalogs/moorings_kbnerr_bear_cove_seldovia.yaml
+++ b/cook_inlet_catalogs/catalogs/moorings_kbnerr_bear_cove_seldovia.yaml
@@ -6,7 +6,10 @@ data:
   cdmo_nerrs_bearcove:
     datatype: intake_erddap.erddap:TableDAPReader
     kwargs:
-      cache_kwargs: null
+      cache_kwargs:
+        simplecache:
+          cache_storage: /home/kristen/.cache/cook-inlet-catalogs
+          same_names: true
       constraints:
         time>=: '1999-01-01T00:00:00Z'
       dataset_id: cdmo_nerrs_bearcove
@@ -27,6 +30,8 @@ data:
       - z
       - sea_water_temperature
       - sea_water_practical_salinity
+      - sea_surface_temperature
+      - water_surface_above_station_datum
       - sea_surface_height_above_sea_level_geoid_local_station_datum
       - sea_surface_height_above_sea_level_geoid_mllw
     metadata:
@@ -49,13 +54,13 @@ data:
         data:
           height: 300
           hover_cols:
-          - sea_water_practical_salinity
-          - z
           - time
-          - longitude
+          - sea_water_practical_salinity
           - station
+          - z
           - sea_water_temperature
           - latitude
+          - longitude
           kind: line
           legend: top
           shared_axes: false
@@ -77,7 +82,10 @@ data:
   nerrs_kacsdwq:
     datatype: intake_erddap.erddap:TableDAPReader
     kwargs:
-      cache_kwargs: null
+      cache_kwargs:
+        simplecache:
+          cache_storage: /home/kristen/.cache/cook-inlet-catalogs
+          same_names: true
       constraints:
         time>=: '1999-01-01T00:00:00Z'
       dataset_id: nerrs_kacsdwq
@@ -98,6 +106,8 @@ data:
       - z
       - sea_water_temperature
       - sea_water_practical_salinity
+      - sea_surface_temperature
+      - water_surface_above_station_datum
       - sea_surface_height_above_sea_level_geoid_local_station_datum
       - sea_surface_height_above_sea_level_geoid_mllw
     metadata:
@@ -113,7 +123,7 @@ data:
       maptype: point
       maxLatitude: 59.44099
       maxLongitude: -151.72096
-      maxTime: '2024-08-15T19:45:00Z'
+      maxTime: '2025-09-11T14:45:00Z'
       minLatitude: 59.44099
       minLongitude: -151.72096
       minTime: '2004-01-01T09:00:00Z'
@@ -121,14 +131,14 @@ data:
         data:
           height: 300
           hover_cols:
-          - sea_water_practical_salinity
-          - z
-          - sea_surface_height_above_sea_level_geoid_local_station_datum
           - time
-          - longitude
+          - sea_water_practical_salinity
           - station
+          - z
           - sea_water_temperature
           - latitude
+          - water_surface_above_station_datum
+          - longitude
           kind: line
           legend: top
           shared_axes: false
@@ -137,7 +147,7 @@ data:
           width: 700
           x: time
           y:
-          - sea_surface_height_above_sea_level_geoid_local_station_datum
+          - water_surface_above_station_datum
           - sea_water_temperature
           - sea_water_practical_salinity
       summary: Timeseries data from 'Seldovia Deep Water Quality (SEQA2)' (nerrs_kacsdwq)
@@ -145,14 +155,17 @@ data:
       title: Seldovia Deep Water Quality (SEQA2)
       urlpath: https://erddap.aoos.org/erddap/tabledap/nerrs_kacsdwq
       variables:
-      - sea_surface_height_above_sea_level_geoid_local_station_datum
+      - water_surface_above_station_datum
       - sea_water_temperature
       - sea_water_practical_salinity
     user_parameters: {}
   nerrs_kacsswq:
     datatype: intake_erddap.erddap:TableDAPReader
     kwargs:
-      cache_kwargs: null
+      cache_kwargs:
+        simplecache:
+          cache_storage: /home/kristen/.cache/cook-inlet-catalogs
+          same_names: true
       constraints:
         time>=: '1999-01-01T00:00:00Z'
       dataset_id: nerrs_kacsswq
@@ -173,6 +186,8 @@ data:
       - z
       - sea_water_temperature
       - sea_water_practical_salinity
+      - sea_surface_temperature
+      - water_surface_above_station_datum
       - sea_surface_height_above_sea_level_geoid_local_station_datum
       - sea_surface_height_above_sea_level_geoid_mllw
     metadata:
@@ -188,7 +203,7 @@ data:
       maptype: point
       maxLatitude: 59.44099
       maxLongitude: -151.72096
-      maxTime: '2024-08-01T18:00:00Z'
+      maxTime: '2025-08-11T18:30:00Z'
       minLatitude: 59.44099
       minLongitude: -151.72096
       minTime: '2004-01-01T09:00:00Z'
@@ -196,14 +211,14 @@ data:
         data:
           height: 300
           hover_cols:
-          - sea_water_practical_salinity
-          - z
-          - sea_surface_height_above_sea_level_geoid_local_station_datum
           - time
-          - longitude
+          - sea_water_practical_salinity
           - station
+          - z
           - sea_water_temperature
           - latitude
+          - water_surface_above_station_datum
+          - longitude
           kind: line
           legend: top
           shared_axes: false
@@ -212,7 +227,7 @@ data:
           width: 700
           x: time
           y:
-          - sea_surface_height_above_sea_level_geoid_local_station_datum
+          - water_surface_above_station_datum
           - sea_water_temperature
           - sea_water_practical_salinity
       summary: Timeseries data from 'Seldovia Surface Water Quality' (nerrs_kacsswq)
@@ -220,7 +235,7 @@ data:
       title: Seldovia Surface Water Quality
       urlpath: https://erddap.aoos.org/erddap/tabledap/nerrs_kacsswq
       variables:
-      - sea_surface_height_above_sea_level_geoid_local_station_datum
+      - water_surface_above_station_datum
       - sea_water_temperature
       - sea_water_practical_salinity
     user_parameters: {}
@@ -230,9 +245,9 @@ metadata:
   header_names: null
   included: true
   key_variables:
+  - salt
   - temp
   - ssh
-  - salt
   map:
     c: station
     clabel: ''
@@ -272,7 +287,7 @@ metadata:
   maptype: point
   maxLatitude: 59.7262
   maxLongitude: -151.04865
-  maxTime: '2024-08-15T19:45:00Z'
+  maxTime: '2025-09-11T14:45:00Z'
   minLatitude: 59.44099
   minLongitude: -151.72096
   minTime: '2004-01-01T09:00:00Z'
