--- a/cook_inlet_catalogs/catalogs/moorings_kbnerr_homer.yaml
+++ b/cook_inlet_catalogs/catalogs/moorings_kbnerr_homer.yaml
@@ -30,6 +30,8 @@ data:
       - z
       - sea_water_temperature
       - sea_water_practical_salinity
+      - sea_surface_temperature
+      - water_surface_above_station_datum
       - sea_surface_height_above_sea_level_geoid_local_station_datum
       - sea_surface_height_above_sea_level_geoid_mllw
     metadata:
@@ -53,14 +55,14 @@ data:
         data:
           height: 300
           hover_cols:
+          - longitude
+          - latitude
           - station
-          - sea_water_practical_salinity
+          - water_surface_above_station_datum
           - sea_water_temperature
           - time
-          - sea_surface_height_above_sea_level_geoid_local_station_datum
-          - longitude
+          - sea_water_practical_salinity
           - z
-          - latitude
           kind: line
           legend: top
           shared_axes: false
@@ -69,7 +71,7 @@ data:
           width: 700
           x: time
           y:
-          - sea_surface_height_above_sea_level_geoid_local_station_datum
+          - water_surface_above_station_datum
           - sea_water_temperature
           - sea_water_practical_salinity
       summary: Timeseries data from 'Homer Dolphin Surface Water Quality (Historical)'
@@ -78,7 +80,7 @@ data:
       title: Homer Dolphin Surface Water Quality (Historical)
       urlpath: https://erddap.aoos.org/erddap/tabledap/homer-dolphin-surface-water-q
       variables:
-      - sea_surface_height_above_sea_level_geoid_local_station_datum
+      - water_surface_above_station_datum
       - sea_water_temperature
       - sea_water_practical_salinity
     user_parameters: {}
@@ -109,6 +111,8 @@ data:
       - z
       - sea_water_temperature
       - sea_water_practical_salinity
+      - sea_surface_temperature
+      - water_surface_above_station_datum
       - sea_surface_height_above_sea_level_geoid_local_station_datum
       - sea_surface_height_above_sea_level_geoid_mllw
     metadata:
@@ -124,7 +128,7 @@ data:
       maptype: point
       maxLatitude: 59.60205
       maxLongitude: -151.40942
-      maxTime: '2024-08-01T21:15:00Z'
+      maxTime: '2025-09-06T01:15:00Z'
       minLatitude: 59.60205
       minLongitude: -151.40942
       minTime: '2012-05-31T21:15:00Z'
@@ -132,14 +136,14 @@ data:
         data:
           height: 300
           hover_cols:
+          - longitude
+          - latitude
           - station
-          - sea_water_practical_salinity
+          - water_surface_above_station_datum
           - sea_water_temperature
           - time
-          - sea_surface_height_above_sea_level_geoid_local_station_datum
-          - longitude
+          - sea_water_practical_salinity
           - z
-          - latitude
           kind: line
           legend: top
           shared_axes: false
@@ -148,7 +152,7 @@ data:
           width: 700
           x: time
           y:
-          - sea_surface_height_above_sea_level_geoid_local_station_datum
+          - water_surface_above_station_datum
           - sea_water_temperature
           - sea_water_practical_salinity
       summary: Timeseries data from 'Homer Surface 3 Water Quality' (nerrs_kach3wq)
@@ -156,7 +160,7 @@ data:
       title: Homer Surface 3 Water Quality
       urlpath: https://erddap.aoos.org/erddap/tabledap/nerrs_kach3wq
       variables:
-      - sea_surface_height_above_sea_level_geoid_local_station_datum
+      - water_surface_above_station_datum
       - sea_water_temperature
       - sea_water_practical_salinity
     user_parameters: {}
@@ -187,6 +191,8 @@ data:
       - z
       - sea_water_temperature
       - sea_water_practical_salinity
+      - sea_surface_temperature
+      - water_surface_above_station_datum
       - sea_surface_height_above_sea_level_geoid_local_station_datum
       - sea_surface_height_above_sea_level_geoid_mllw
     metadata:
@@ -202,7 +208,7 @@ data:
       maptype: point
       maxLatitude: 59.602
       maxLongitude: -151.4088
-      maxTime: '2024-08-14T14:15:00Z'
+      maxTime: '2025-09-11T14:15:00Z'
       minLatitude: 59.602
       minLongitude: -151.4088
       minTime: '2003-01-01T09:00:00Z'
@@ -210,14 +216,14 @@ data:
         data:
           height: 300
           hover_cols:
+          - longitude
+          - latitude
           - station
-          - sea_water_practical_salinity
+          - water_surface_above_station_datum
           - sea_water_temperature
           - time
-          - sea_surface_height_above_sea_level_geoid_local_station_datum
-          - longitude
+          - sea_water_practical_salinity
           - z
-          - latitude
           kind: line
           legend: top
           shared_axes: false
@@ -226,7 +232,7 @@ data:
           width: 700
           x: time
           y:
-          - sea_surface_height_above_sea_level_geoid_local_station_datum
+          - water_surface_above_station_datum
           - sea_water_temperature
           - sea_water_practical_salinity
       summary: Timeseries data from 'Homer Dolphin Deep Water Quality (KCHA2)' (nerrs_kachdwq)
@@ -234,7 +240,7 @@ data:
       title: Homer Dolphin Deep Water Quality (KCHA2)
       urlpath: https://erddap.aoos.org/erddap/tabledap/nerrs_kachdwq
       variables:
-      - sea_surface_height_above_sea_level_geoid_local_station_datum
+      - water_surface_above_station_datum
       - sea_water_temperature
       - sea_water_practical_salinity
     user_parameters: {}
@@ -249,6 +255,9 @@ metadata:
   - ssh
   map:
     c: station
+    clabel: ''
+    clim: null
+    cmap: null
     coastline: false
     color: k
     geo: true
@@ -283,7 +292,7 @@ metadata:
   maptype: point
   maxLatitude: 59.60205
   maxLongitude: -151.40878
-  maxTime: '2024-08-14T14:15:00Z'
+  maxTime: '2025-09-11T14:15:00Z'
   minLatitude: 59.602
   minLongitude: -151.40942
   minTime: '2003-01-01T09:00:00Z'
