--- a/cook_inlet_catalogs/catalogs/moorings_noaa.yaml
+++ b/cook_inlet_catalogs/catalogs/moorings_noaa.yaml
@@ -13,7 +13,10 @@ data:
   boulder-point:
     datatype: intake_erddap.erddap:TableDAPReader
     kwargs:
-      cache_kwargs: null
+      cache_kwargs:
+        simplecache:
+          cache_storage: /home/kristen/.cache/cook-inlet-catalogs
+          same_names: true
       constraints:
         time>=: '1999-01-01T00:00:00Z'
       dataset_id: boulder-point
@@ -35,6 +38,7 @@ data:
       - sea_water_temperature
       - sea_water_practical_salinity
       - sea_surface_temperature
+      - water_surface_above_station_datum
       - sea_surface_height_above_sea_level_geoid_local_station_datum
       - sea_surface_height_above_sea_level_geoid_mllw
     metadata:
@@ -58,11 +62,11 @@ data:
           height: 300
           hover_cols:
           - longitude
-          - time
-          - z
-          - sea_surface_height_above_sea_level_geoid_mllw
-          - latitude
           - station
+          - z
+          - time
+          - latitude
+          - water_surface_above_station_datum
           kind: line
           legend: top
           shared_axes: false
@@ -71,18 +75,21 @@ data:
           width: 700
           x: time
           y:
-          - sea_surface_height_above_sea_level_geoid_mllw
+          - water_surface_above_station_datum
       summary: Timeseries data from 'Boulder Point, AK' (boulder-point)
       tabledap: https://erddap.aoos.org/erddap/tabledap/boulder-point
       title: Boulder Point, AK
       urlpath: https://erddap.aoos.org/erddap/tabledap/boulder-point
       variables:
-      - sea_surface_height_above_sea_level_geoid_mllw
+      - water_surface_above_station_datum
     user_parameters: {}
   geese-island-gps-tide-buoy:
     datatype: intake_erddap.erddap:TableDAPReader
     kwargs:
-      cache_kwargs: null
+      cache_kwargs:
+        simplecache:
+          cache_storage: /home/kristen/.cache/cook-inlet-catalogs
+          same_names: true
       constraints:
         time>=: '1999-01-01T00:00:00Z'
       dataset_id: geese-island-gps-tide-buoy
@@ -104,6 +111,7 @@ data:
       - sea_water_temperature
       - sea_water_practical_salinity
       - sea_surface_temperature
+      - water_surface_above_station_datum
       - sea_surface_height_above_sea_level_geoid_local_station_datum
       - sea_surface_height_above_sea_level_geoid_mllw
     metadata:
@@ -127,11 +135,11 @@ data:
           height: 300
           hover_cols:
           - longitude
-          - time
-          - z
-          - sea_surface_height_above_sea_level_geoid_mllw
-          - latitude
           - station
+          - z
+          - time
+          - latitude
+          - water_surface_above_station_datum
           kind: line
           legend: top
           shared_axes: false
@@ -140,18 +148,21 @@ data:
           width: 700
           x: time
           y:
-          - sea_surface_height_above_sea_level_geoid_mllw
+          - water_surface_above_station_datum
       summary: Timeseries data from 'Geese Island Gps Tide Buoy, AK' (geese-island-gps-tide-buoy)
       tabledap: https://erddap.aoos.org/erddap/tabledap/geese-island-gps-tide-buoy
       title: Geese Island Gps Tide Buoy, AK
       urlpath: https://erddap.aoos.org/erddap/tabledap/geese-island-gps-tide-buoy
       variables:
-      - sea_surface_height_above_sea_level_geoid_mllw
+      - water_surface_above_station_datum
     user_parameters: {}
   noaa_nos_co_ops_9455500:
     datatype: intake_erddap.erddap:TableDAPReader
     kwargs:
-      cache_kwargs: null
+      cache_kwargs:
+        simplecache:
+          cache_storage: /home/kristen/.cache/cook-inlet-catalogs
+          same_names: true
       constraints:
         time>=: '1999-01-01T00:00:00Z'
       dataset_id: noaa_nos_co_ops_9455500
@@ -173,6 +184,7 @@ data:
       - sea_water_temperature
       - sea_water_practical_salinity
       - sea_surface_temperature
+      - water_surface_above_station_datum
       - sea_surface_height_above_sea_level_geoid_local_station_datum
       - sea_surface_height_above_sea_level_geoid_mllw
     metadata:
@@ -188,7 +200,7 @@ data:
       maptype: point
       maxLatitude: 59.440528
       maxLongitude: -151.719944
-      maxTime: '2024-09-15T07:00:00Z'
+      maxTime: '2025-09-25T16:12:00Z'
       minLatitude: 59.440528
       minLongitude: -151.719944
       minTime: '1975-07-12T10:00:00Z'
@@ -196,13 +208,13 @@ data:
         data:
           height: 300
           hover_cols:
-          - sea_water_temperature
           - longitude
-          - time
-          - z
-          - sea_surface_height_above_sea_level_geoid_mllw
-          - latitude
           - station
+          - z
+          - sea_water_temperature
+          - time
+          - latitude
+          - water_surface_above_station_datum
           kind: line
           legend: top
           shared_axes: false
@@ -211,20 +223,23 @@ data:
           width: 700
           x: time
           y:
-          - sea_surface_height_above_sea_level_geoid_mllw
+          - water_surface_above_station_datum
           - sea_water_temperature
       summary: Timeseries data from 'Seldovia, AK (OVIA2)' (noaa_nos_co_ops_9455500)
       tabledap: https://erddap.aoos.org/erddap/tabledap/noaa_nos_co_ops_9455500
       title: Seldovia, AK (OVIA2)
       urlpath: https://erddap.aoos.org/erddap/tabledap/noaa_nos_co_ops_9455500
       variables:
-      - sea_surface_height_above_sea_level_geoid_mllw
+      - water_surface_above_station_datum
       - sea_water_temperature
     user_parameters: {}
   noaa_nos_co_ops_9455595:
     datatype: intake_erddap.erddap:TableDAPReader
     kwargs:
-      cache_kwargs: null
+      cache_kwargs:
+        simplecache:
+          cache_storage: /home/kristen/.cache/cook-inlet-catalogs
+          same_names: true
       constraints:
         time>=: '1999-01-01T00:00:00Z'
       dataset_id: noaa_nos_co_ops_9455595
@@ -246,6 +261,7 @@ data:
       - sea_water_temperature
       - sea_water_practical_salinity
       - sea_surface_temperature
+      - water_surface_above_station_datum
       - sea_surface_height_above_sea_level_geoid_local_station_datum
       - sea_surface_height_above_sea_level_geoid_mllw
     metadata:
@@ -260,7 +276,7 @@ data:
       maptype: point
       maxLatitude: 59.725
       maxLongitude: -151.023
-      maxTime: '2024-09-17T12:00:00Z'
+      maxTime: '2025-10-02T16:00:00Z'
       minLatitude: 59.725
       minLongitude: -151.023
       minTime: '2008-07-03T23:00:00Z'
@@ -269,11 +285,11 @@ data:
           height: 300
           hover_cols:
           - longitude
-          - time
-          - z
-          - sea_surface_height_above_sea_level_geoid_mllw
-          - latitude
           - station
+          - z
+          - time
+          - latitude
+          - water_surface_above_station_datum
           kind: line
           legend: top
           shared_axes: false
@@ -282,18 +298,21 @@ data:
           width: 700
           x: time
           y:
-          - sea_surface_height_above_sea_level_geoid_mllw
+          - water_surface_above_station_datum
       summary: Timeseries data from 'Bear Cove, Kachemak Bay, AK' (noaa_nos_co_ops_9455595)
       tabledap: https://erddap.aoos.org/erddap/tabledap/noaa_nos_co_ops_9455595
       title: Bear Cove, Kachemak Bay, AK
       urlpath: https://erddap.aoos.org/erddap/tabledap/noaa_nos_co_ops_9455595
       variables:
-      - sea_surface_height_above_sea_level_geoid_mllw
+      - water_surface_above_station_datum
     user_parameters: {}
   noaa_nos_co_ops_9455920:
     datatype: intake_erddap.erddap:TableDAPReader
     kwargs:
-      cache_kwargs: null
+      cache_kwargs:
+        simplecache:
+          cache_storage: /home/kristen/.cache/cook-inlet-catalogs
+          same_names: true
       constraints:
         time>=: '1999-01-01T00:00:00Z'
       dataset_id: noaa_nos_co_ops_9455920
@@ -315,6 +334,7 @@ data:
       - sea_water_temperature
       - sea_water_practical_salinity
       - sea_surface_temperature
+      - water_surface_above_station_datum
       - sea_surface_height_above_sea_level_geoid_local_station_datum
       - sea_surface_height_above_sea_level_geoid_mllw
     metadata:
@@ -330,7 +350,7 @@ data:
       maptype: point
       maxLatitude: 61.2375
       maxLongitude: -149.8904
-      maxTime: '2024-09-15T05:00:00Z'
+      maxTime: '2025-09-25T16:18:00Z'
       minLatitude: 61.2375
       minLongitude: -149.8904
       minTime: '1978-10-02T05:00:00Z'
@@ -338,13 +358,13 @@ data:
         data:
           height: 300
           hover_cols:
-          - sea_water_temperature
           - longitude
-          - time
-          - z
-          - sea_surface_height_above_sea_level_geoid_mllw
-          - latitude
           - station
+          - z
+          - sea_water_temperature
+          - time
+          - latitude
+          - water_surface_above_station_datum
           kind: line
           legend: top
           shared_axes: false
@@ -353,20 +373,23 @@ data:
           width: 700
           x: time
           y:
-          - sea_surface_height_above_sea_level_geoid_mllw
+          - water_surface_above_station_datum
           - sea_water_temperature
       summary: Timeseries data from 'Anchorage, AK (ANTA2)' (noaa_nos_co_ops_9455920)
       tabledap: https://erddap.aoos.org/erddap/tabledap/noaa_nos_co_ops_9455920
       title: Anchorage, AK (ANTA2)
       urlpath: https://erddap.aoos.org/erddap/tabledap/noaa_nos_co_ops_9455920
       variables:
-      - sea_surface_height_above_sea_level_geoid_mllw
+      - water_surface_above_station_datum
       - sea_water_temperature
     user_parameters: {}
   noaa_nos_co_ops_9457292:
     datatype: intake_erddap.erddap:TableDAPReader
     kwargs:
-      cache_kwargs: null
+      cache_kwargs:
+        simplecache:
+          cache_storage: /home/kristen/.cache/cook-inlet-catalogs
+          same_names: true
       constraints:
         time>=: '1999-01-01T00:00:00Z'
       dataset_id: noaa_nos_co_ops_9457292
@@ -388,6 +411,7 @@ data:
       - sea_water_temperature
       - sea_water_practical_salinity
       - sea_surface_temperature
+      - water_surface_above_station_datum
       - sea_surface_height_above_sea_level_geoid_local_station_datum
       - sea_surface_height_above_sea_level_geoid_mllw
     metadata:
@@ -403,7 +427,7 @@ data:
       maptype: point
       maxLatitude: 57.730278
       maxLongitude: -152.513889
-      maxTime: '2024-09-15T09:00:00Z'
+      maxTime: '2025-09-25T16:12:00Z'
       minLatitude: 57.730278
       minLongitude: -152.513889
       minTime: '1984-07-11T02:00:00Z'
@@ -411,13 +435,13 @@ data:
         data:
           height: 300
           hover_cols:
-          - sea_water_temperature
           - longitude
-          - time
-          - z
-          - sea_surface_height_above_sea_level_geoid_mllw
-          - latitude
           - station
+          - z
+          - sea_water_temperature
+          - time
+          - latitude
+          - water_surface_above_station_datum
           kind: line
           legend: top
           shared_axes: false
@@ -426,20 +450,23 @@ data:
           width: 700
           x: time
           y:
-          - sea_surface_height_above_sea_level_geoid_mllw
+          - water_surface_above_station_datum
           - sea_water_temperature
       summary: Timeseries data from 'Kodiak Island, AK (KDAA2)' (noaa_nos_co_ops_9457292)
       tabledap: https://erddap.aoos.org/erddap/tabledap/noaa_nos_co_ops_9457292
       title: Kodiak Island, AK (KDAA2)
       urlpath: https://erddap.aoos.org/erddap/tabledap/noaa_nos_co_ops_9457292
       variables:
-      - sea_surface_height_above_sea_level_geoid_mllw
+      - water_surface_above_station_datum
       - sea_water_temperature
     user_parameters: {}
   noaa_nos_co_ops_9457804:
     datatype: intake_erddap.erddap:TableDAPReader
     kwargs:
-      cache_kwargs: null
+      cache_kwargs:
+        simplecache:
+          cache_storage: /home/kristen/.cache/cook-inlet-catalogs
+          same_names: true
       constraints:
         time>=: '1999-01-01T00:00:00Z'
       dataset_id: noaa_nos_co_ops_9457804
@@ -461,6 +488,7 @@ data:
       - sea_water_temperature
       - sea_water_practical_salinity
       - sea_surface_temperature
+      - water_surface_above_station_datum
       - sea_surface_height_above_sea_level_geoid_local_station_datum
       - sea_surface_height_above_sea_level_geoid_mllw
     metadata:
@@ -476,7 +504,7 @@ data:
       maptype: point
       maxLatitude: 56.8974
       maxLongitude: -154.248
-      maxTime: '2024-09-15T07:00:00Z'
+      maxTime: '2025-09-25T16:12:00Z'
       minLatitude: 56.8974
       minLongitude: -154.248
       minTime: '2006-05-18T22:00:00Z'
@@ -484,13 +512,13 @@ data:
         data:
           height: 300
           hover_cols:
-          - sea_water_temperature
           - longitude
-          - time
-          - z
-          - sea_surface_height_above_sea_level_geoid_mllw
-          - latitude
           - station
+          - z
+          - sea_water_temperature
+          - time
+          - latitude
+          - water_surface_above_station_datum
           kind: line
           legend: top
           shared_axes: false
@@ -499,20 +527,23 @@ data:
           width: 700
           x: time
           y:
-          - sea_surface_height_above_sea_level_geoid_mllw
+          - water_surface_above_station_datum
           - sea_water_temperature
       summary: Timeseries data from 'Alitak, AK (ALIA2)' (noaa_nos_co_ops_9457804)
       tabledap: https://erddap.aoos.org/erddap/tabledap/noaa_nos_co_ops_9457804
       title: Alitak, AK (ALIA2)
       urlpath: https://erddap.aoos.org/erddap/tabledap/noaa_nos_co_ops_9457804
       variables:
-      - sea_surface_height_above_sea_level_geoid_mllw
+      - water_surface_above_station_datum
       - sea_water_temperature
     user_parameters: {}
   old-harbor-1:
     datatype: intake_erddap.erddap:TableDAPReader
     kwargs:
-      cache_kwargs: null
+      cache_kwargs:
+        simplecache:
+          cache_storage: /home/kristen/.cache/cook-inlet-catalogs
+          same_names: true
       constraints:
         time>=: '1999-01-01T00:00:00Z'
       dataset_id: old-harbor-1
@@ -534,6 +565,7 @@ data:
       - sea_water_temperature
       - sea_water_practical_salinity
       - sea_surface_temperature
+      - water_surface_above_station_datum
       - sea_surface_height_above_sea_level_geoid_local_station_datum
       - sea_surface_height_above_sea_level_geoid_mllw
     metadata:
@@ -547,7 +579,7 @@ data:
       maptype: point
       maxLatitude: 57.199811
       maxLongitude: -153.307086
-      maxTime: '2018-08-27T15:00:00Z'
+      maxTime: '2018-08-29T15:00:00Z'
       minLatitude: 57.199811
       minLongitude: -153.307086
       minTime: '2014-09-20T13:00:00Z'
@@ -556,11 +588,11 @@ data:
           height: 300
           hover_cols:
           - longitude
-          - time
-          - z
-          - sea_surface_height_above_sea_level_geoid_local_station_datum
-          - latitude
           - station
+          - z
+          - time
+          - latitude
+          - water_surface_above_station_datum
           kind: line
           legend: top
           shared_axes: false
@@ -569,18 +601,21 @@ data:
           width: 700
           x: time
           y:
-          - sea_surface_height_above_sea_level_geoid_local_station_datum
+          - water_surface_above_station_datum
       summary: Timeseries data from 'Old Harbor' (old-harbor-1)
       tabledap: https://erddap.aoos.org/erddap/tabledap/old-harbor-1
       title: Old Harbor
       urlpath: https://erddap.aoos.org/erddap/tabledap/old-harbor-1
       variables:
-      - sea_surface_height_above_sea_level_geoid_local_station_datum
+      - water_surface_above_station_datum
     user_parameters: {}
   sitkalidak-island-gps-tide-bu:
     datatype: intake_erddap.erddap:TableDAPReader
     kwargs:
-      cache_kwargs: null
+      cache_kwargs:
+        simplecache:
+          cache_storage: /home/kristen/.cache/cook-inlet-catalogs
+          same_names: true
       constraints:
         time>=: '1999-01-01T00:00:00Z'
       dataset_id: sitkalidak-island-gps-tide-bu
@@ -602,6 +637,7 @@ data:
       - sea_water_temperature
       - sea_water_practical_salinity
       - sea_surface_temperature
+      - water_surface_above_station_datum
       - sea_surface_height_above_sea_level_geoid_local_station_datum
       - sea_surface_height_above_sea_level_geoid_mllw
     metadata:
@@ -625,11 +661,11 @@ data:
           height: 300
           hover_cols:
           - longitude
-          - time
-          - z
-          - sea_surface_height_above_sea_level_geoid_mllw
-          - latitude
           - station
+          - z
+          - time
+          - latitude
+          - water_surface_above_station_datum
           kind: line
           legend: top
           shared_axes: false
@@ -638,18 +674,21 @@ data:
           width: 700
           x: time
           y:
-          - sea_surface_height_above_sea_level_geoid_mllw
+          - water_surface_above_station_datum
       summary: Timeseries data from 'Sitkalidak Island Gps Tide Buoy, AK' (sitkalidak-island-gps-tide-bu)
       tabledap: https://erddap.aoos.org/erddap/tabledap/sitkalidak-island-gps-tide-bu
       title: Sitkalidak Island Gps Tide Buoy, AK
       urlpath: https://erddap.aoos.org/erddap/tabledap/sitkalidak-island-gps-tide-bu
       variables:
-      - sea_surface_height_above_sea_level_geoid_mllw
+      - water_surface_above_station_datum
     user_parameters: {}
   wmo_46077:
     datatype: intake_erddap.erddap:TableDAPReader
     kwargs:
-      cache_kwargs: null
+      cache_kwargs:
+        simplecache:
+          cache_storage: /home/kristen/.cache/cook-inlet-catalogs
+          same_names: true
       constraints:
         time>=: '1999-01-01T00:00:00Z'
       dataset_id: wmo_46077
@@ -671,6 +710,7 @@ data:
       - sea_water_temperature
       - sea_water_practical_salinity
       - sea_surface_temperature
+      - water_surface_above_station_datum
       - sea_surface_height_above_sea_level_geoid_local_station_datum
       - sea_surface_height_above_sea_level_geoid_mllw
     metadata:
@@ -684,7 +724,7 @@ data:
       maptype: point
       maxLatitude: 57.892
       maxLongitude: -154.291
-      maxTime: '2024-09-10T13:00:00Z'
+      maxTime: '2025-09-25T17:40:00Z'
       minLatitude: 57.892
       minLongitude: -154.291
       minTime: '2006-01-01T00:00:00Z'
@@ -693,11 +733,11 @@ data:
           height: 300
           hover_cols:
           - longitude
-          - sea_surface_temperature
-          - time
-          - z
-          - latitude
           - station
+          - z
+          - time
+          - latitude
+          - sea_surface_temperature
           kind: line
           legend: top
           shared_axes: false
@@ -761,7 +801,7 @@ metadata:
   maptype: point
   maxLatitude: 61.2375
   maxLongitude: -149.8904
-  maxTime: '2024-09-17T12:00:00Z'
+  maxTime: '2025-10-02T16:00:00Z'
   minLatitude: 56.594694
   minLongitude: -154.291
   minTime: '1975-07-12T10:00:00Z'
