--- a/cook_inlet_catalogs/catalogs/moorings_uaf.yaml
+++ b/cook_inlet_catalogs/catalogs/moorings_uaf.yaml
@@ -29,6 +29,8 @@ data:
       - z
       - sea_water_temperature
       - sea_water_practical_salinity
+      - sea_surface_temperature
+      - water_surface_above_station_datum
       - sea_surface_height_above_sea_level_geoid_local_station_datum
       - sea_surface_height_above_sea_level_geoid_mllw
     metadata:
@@ -42,7 +44,7 @@ data:
       maptype: point
       maxLatitude: 59.572708
       maxLongitude: -151.272242
-      maxTime: '2024-08-12T23:43:00Z'
+      maxTime: '2025-06-30T23:38:00Z'
       minLatitude: 59.572708
       minLongitude: -151.272242
       minTime: '2017-01-01T00:22:00Z'
@@ -50,12 +52,12 @@ data:
         data:
           height: 300
           hover_cols:
+          - latitude
+          - water_surface_above_station_datum
+          - z
+          - longitude
           - station
           - time
-          - sea_surface_height_above_sea_level_geoid_local_station_datum
-          - longitude
-          - z
-          - latitude
           kind: line
           legend: top
           shared_axes: false
@@ -64,13 +66,13 @@ data:
           width: 700
           x: time
           y:
-          - sea_surface_height_above_sea_level_geoid_local_station_datum
+          - water_surface_above_station_datum
       summary: Timeseries data from 'Peterson Bay, AK - GPS-R, JOA Surveys' (peterson-bay-ak-gnss-r)
       tabledap: https://erddap.aoos.org/erddap/tabledap/peterson-bay-ak-gnss-r
       title: Peterson Bay, AK - GPS-R, JOA Surveys
       urlpath: https://erddap.aoos.org/erddap/tabledap/peterson-bay-ak-gnss-r
       variables:
-      - sea_surface_height_above_sea_level_geoid_local_station_datum
+      - water_surface_above_station_datum
     user_parameters: {}
   uaf_ocean_acidification_resea_ko:
     datatype: intake_erddap.erddap:TableDAPReader
@@ -99,6 +101,8 @@ data:
       - z
       - sea_water_temperature
       - sea_water_practical_salinity
+      - sea_surface_temperature
+      - water_surface_above_station_datum
       - sea_surface_height_above_sea_level_geoid_local_station_datum
       - sea_surface_height_above_sea_level_geoid_mllw
     metadata:
@@ -121,13 +125,13 @@ data:
         data:
           height: 300
           hover_cols:
-          - station
+          - latitude
+          - z
           - sea_water_practical_salinity
           - sea_water_temperature
-          - time
           - longitude
-          - z
-          - latitude
+          - station
+          - time
           kind: line
           legend: top
           shared_axes: false
@@ -158,6 +162,9 @@ metadata:
   - ssh
   map:
     c: station
+    clabel: ''
+    clim: null
+    cmap: null
     coastline: false
     color: k
     geo: true
@@ -192,7 +199,7 @@ metadata:
   maptype: point
   maxLatitude: 59.572708
   maxLongitude: -151.272242
-  maxTime: '2024-08-12T23:43:00Z'
+  maxTime: '2025-06-30T23:38:00Z'
   minLatitude: 57.7
   minLongitude: -152.31
   minTime: '2013-03-30T00:17:00Z'
